# docs/swagger.yaml
@@ -898,6 +898,9 @@ definitions:
         type: string
       bio:
         type: string
+      created_at:
+        example: "2024-06-05T02:32:34.462196+01:00"
+        type: string
       email:
         type: string
       first_name:
@@ -915,6 +918,8 @@ definitions:
       refresh:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InNpbXBsZWlkIiwiZXhwIjoxMjU3ODk0MzAwfQ.Ys_jP70xdxch32hFECfJQuvpvU5_IiTIN2pJJv68EqQ
         type: string
+      stories_count:
+        type: integer
       username:
         type: string
     type: object
@@ -1016,6 +1021,9 @@ definitions:
         type: string
       bio:
         type: string
+      created_at:
+        example: "2024-06-05T02:32:34.462196+01:00"
+        type: string
       email:
         type: string
       first_name:
@@ -1030,6 +1038,8 @@ definitions:
         type: array
       last_name:
         type: string
+      stories_count:
+        type: integer
       username:
         type: string
     type: object
@@ -1044,12 +1054,26 @@ definitions:
         example: success
         type: string
     type: object
-  schemas.UserProfilesResponseSchema:
+  schemas.UserProfilesResponseDataSchema:
     properties:
-      data:
+      current_page:
+        example: 1
+        type: integer
+      last_page:
+        example: 100
+        type: integer
+      per_page:
+        example: 100
+        type: integer
+      users:
         items:
           $ref: '#/definitions/schemas.UserProfile'
         type: array
+    type: object
+  schemas.UserProfilesResponseSchema:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.UserProfilesResponseDataSchema'
       message:
         example: Data fetched/created/updated/deleted
         type: string
@@ -1122,6 +1146,8 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List Books with Pagination
       tags:
       - Admin
@@ -1132,21 +1158,16 @@ paths:
       description: Retrieves a list of user profiles with support for pagination and
         optional filtering based on user account type.
       parameters:
-      - description: Type of user to filter by (all, reader, writer)
+      - description: Type of user to filter by
         enum:
-        - all
-        - reader
-        - writer
+        - READER
+        - WRITER
+        - ADMIN
         in: query
-        name: type
+        name: account_type
         type: string
-      - default: 10
-        description: Limit number of user profiles per page (default is 10)
-        in: query
-        name: limit
-        type: integer
-      - default: 0
-        description: Page number starting from 0 (default is 0)
+      - default: 1
+        description: Current page
         in: query
         name: page
         type: integer
@@ -1161,14 +1182,12 @@ paths:
           description: Invalid query parameters
           schema:
             $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: No users found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List Users with Pagination
       tags:
       - Admin
